Fix font size of middle-section heading to improve readability

--- a/docs/CSS/header.css
+++ b/docs/CSS/header.css
@@ -53,7 +53,7 @@ body{
 }
 
 .middle-section h1{
-    font-size: 20px;
+    font-size: 10px;
     font-weight: 1000;
     font-style: italic;
     color: #34495e;
